@@ -505,6 +505,18 @@ struct colAttrs {
 /* reset statistics query */
 #define PG_STAT_RESET_QUERY "SELECT pg_stat_reset(), pg_stat_statements_reset()"
 
+/* get query text by pg_stat_statements.queryid */
+#define PG_GET_QUERYTEXT_BY_QUERYID_QUERY_P1 \
+    "SELECT \
+        d.datname AS database, a.rolname AS user, \
+        sum(p.calls) AS total_calls, sum(p.rows) as total_rows, \
+        p.query \
+    FROM pg_stat_statements p \
+    JOIN pg_authid a ON a.oid=p.userid \
+    JOIN pg_database d ON d.oid=p.dbid \
+    WHERE d.datname != 'postgres' AND p.queryid = '"
+#define PG_GET_QUERYTEXT_BY_QUERYID_QUERY_P2 "' GROUP BY a.rolname, d.datname, query"
+
 /* postmaster uptime query */
 #define PG_UPTIME_QUERY "SELECT date_trunc('seconds', now() - pg_postmaster_start_time())"
 
@@ -587,6 +599,7 @@ void do_noop(WINDOW * window, long int interval);
 void system_view_toggle(WINDOW * window, struct screen_s * screen, bool * first_iter);
 void log_process(WINDOW * window, WINDOW ** w_log, struct screen_s * screen, PGconn * conn);
 void show_full_log(WINDOW * window, struct screen_s * screen, PGconn * conn);
+void get_query_by_id(WINDOW * window, struct screen_s * screen, PGconn * conn, bool * first_iter);
 void pg_stat_reset(WINDOW * window, PGconn * conn, bool * reseted);
 void switch_context(WINDOW * window, struct screen_s * screen,
         enum context context, PGresult * res, bool * first_iter);
