@@ -1,5 +1,6 @@
 pgcenter (development) unstable; urgency=low
 
+  * get query text using pg_stat_statements.queryid (9.4 only).
   * add queryid output into pg_stat_statements (9.4 only).
   * update info about postgres version after suvvessful reconnect.
   * reset previous results when switching between screens.
